tests/fails/goto.lt
-- this is valid in Lua and LuaJIT, but not us, bcoz ::cont:: is the last label in a block
var i = 1
while i < 10
	if i == 5
		i = i + 2
		goto cont

	var j = i
	i = i + 1
	::cont::


-- this is invalid everywhere
var k = 1
do
	if k == 5
		k = k + 2
		goto cont

	var l = k
	k = k + 1
	::cont::
until k >= 10
